// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Messages are shown correctly renders correctly 1`] = `
<div
  className="message text-white bg-danger text-center card"
>
  <div
    className="card-body card-block"
  >
    Текст ошибки
  </div>
</div>
`;

exports[`Messages are shown correctly renders correctly 2`] = `
<div
  className="message text-white bg-success text-center card"
>
  <div
    className="card-body card-block"
  >
    Текст успешного сообщения
  </div>
</div>
`;
